      note will be deleted before the release.

  ------------------------------------------------------------------

  Zope X3.0.0

    New features

      - Implemented rdb:gadflyRoot directive.    

      - Schemas are now copied before they are appended to content type or
        instance. This should probably become a policy later.

    Bug Fixes

      - Fixed issue 228.

      - A service registration form now displays correct information
        about the registration.

      - Factory IDs have to be real IDs now, i.e. either a dotted
        name or a URI.

      - Small but important fix to security map. It was not marking objects
        with modified permissions as changed, due to a missing assignment.

    Much thanks to everyone who contributed to this release:

      Jim Fulton, Marius Gedminas, Fred Drake, Philipp von Weitershausen,
      Stephan Richter, Dmitry Vasiliev, Scott Pascoe, Bjorn Tillenius,
      Eckart Hertzler, Roger Ineichen, Stuart Bishop

  ------------------------------------------------------------------

  Zope X3.0.0 Beta 2

    New features

      - Separated the trusted and untrusted behaviors of page
        templates in the application server.  File-system-based
        templates are trusted, and database-based templates are
        untrusted.

      - Improved using documentation files as tests. (Needed to test
        new security policy):

        Changed DocFileSuite:

        o If a package is passed, it must be passed as a keyword argument.
          (For now, a package can also be passed before passing any file
          names, but this generates a deprecation warning.)

        o File paths may contain '/'s as separators. These will be converted
          to native file separators at run time.

        o It is now possible to pass set-up and tear-down methods

        o It is now possible to pass a dictionary of initial global variables.

        o Error output is improved as is meta data used for verbose output.
