@@ -126,7 +126,7 @@ class TextWidget(SimpleInputWidget):
                                  type=self.type,
                                  name=self.name,
                                  id=self.name,
-                                 value=self._getFormValue(),
+                                 value=self._getFormValue() or '',
                                  cssClass=self.cssClass,
                                  style=self.style,
                                  size=self.displayWidth,
@@ -137,7 +137,7 @@ class TextWidget(SimpleInputWidget):
                                  type=self.type,
                                  name=self.name,
                                  id=self.name,
-                                 value=self._getFormValue(),
+                                 value=self._getFormValue() or '',
                                  cssClass=self.cssClass,
                                  style=self.style,
                                  size=self.displayWidth,
