@@ -42,6 +42,13 @@ Zope Changes
 
       - Fixed issue 228.
 
+      - TextWidgets set the value attribute to "value" when the field
+        has a missing value set and was not required and when there
+        was no input.
+
+      - Fixed a bug in the adapter registry that would prevent `dict`-derived
+        utilites from being retrieved correctly.
+
       - A service registration form now displays correct information
         about the registration.
 
